--- a/Condominio/app/src/main/res/layout/activity_add_apartamento.xml
+++ b/Condominio/app/src/main/res/layout/activity_add_apartamento.xml
@@ -60,7 +60,7 @@
         </LinearLayout>
 
 
-        <EditText
+        <AutoCompleteTextView
             android:inputType="textCapWords"
             android:maxLength="30"
             android:layout_marginTop="4dp"
