--- a/Condominio/app/src/main/res/layout/activity_main.xml
+++ b/Condominio/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".app.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:backgroundTint="#ce7474">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
