--- a/Condominio/app/src/main/res/layout/cardview_apartamento.xml
+++ b/Condominio/app/src/main/res/layout/cardview_apartamento.xml
@@ -18,22 +18,43 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/nome_proprietario"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:gravity="center" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/numero_apt"
+            <TextView
+                android:id="@+id/nome_proprietario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:gravity="start"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/numero_apt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:gravity="start"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+
+
+        <ImageButton
+            android:id="@+id/img_card"
+            android:layout_weight="5"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:gravity="center" />
+            android:layout_height="match_parent" />
 
-    </LinearLayout>
+        </LinearLayout>
+
 
 </android.support.v7.widget.CardView>
